@@ -1,33 +1,29 @@
 package botLogic;
 
 import JavaBots.Bot;
-import botLogic.dataBase.Data;
-import botLogic.parser.Parser;
-import botLogic.utils.Time;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import dataBase.Data;
+import parser.Parser;
+import utils.Calendar;
+import utils.Time;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
 import java.io.IOException;
 import java.sql.SQLException;
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.time.*;
+import java.util.*;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
 /**
  * Проверка обработки команд
  */
 @ExtendWith(MockitoExtension.class)
+@TestMethodOrder(MethodOrderer.MethodName.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class CommandTest {
     @Mock
@@ -42,18 +38,25 @@ public class CommandTest {
     @Mock
     Bot bot;
 
-    @Mock
-    Time time;
+    MockedStatic<Clock> clockMock;
 
+    Time time;
     User user;
     Logic logic;
 
-    List<String> schedule = Arrays.asList("8:00 Матан", "-", "10:00 Алгем");
-    List<List<String>> weekSchedule = Arrays.asList(schedule);
-    String id = "228";
-    String group = "МЕН-220201";
-    String date = "1.12";
-    int shiftDay = 1;                                                   //Monday
+    @Captor
+    ArgumentCaptor<Runnable> runnableCaptor;
+
+    @Captor
+    ArgumentCaptor<String> stringCaptor;
+
+    final LocalDate localDate = LocalDate.of(2023, 11, 27);
+    final String dateString = "%s.%s".formatted(localDate.getDayOfMonth(), localDate.getMonthValue());
+    final String absoluteDateString = "%s.%s.%s".formatted(localDate.getDayOfMonth(), localDate.getMonthValue(), localDate.getYear());
+    final LocalTime localTime = LocalTime.of(6, 0);
+    final List<String> schedule = Arrays.asList("8:00 Матан", "10:00 Алгем", "12:00 Дискретка");
+    final String id = "T228";
+    final String group = "МЕН-220201";
 
     /**
      * Инициализация переменных database, parser, user перед каждым тестом
@@ -62,25 +65,36 @@ public class CommandTest {
      * @throws NoSuchElementException не бросается
      */
     @BeforeEach
-    public void MockitoInit() throws SQLException, IOException, NoSuchElementException{
+    public void MockitoInit() throws NoSuchElementException, IOException, SQLException{
+        time = new Calendar();
         user = new User(database, id, parser, time, bot, scheduler);
         logic = new Logic(database, parser, time, scheduler);
 
-        Mockito.when(time.getSecondsOfDay()).thenReturn(6 * 60 * 60);                         //6:00
-        Mockito.when(time.getSecondsUtilTomorrow()).thenReturn(18 * 60 * 60);                 //18 часов
+        ZoneId zoneId = ZoneId.systemDefault();
+        LocalDateTime localDateTime = LocalDateTime.of(localDate, localTime);
+        Instant instant = localDateTime.atZone(zoneId).toInstant();
+        Instant fixedInstant = Instant.ofEpochMilli(instant.toEpochMilli());    //в миллисекундах
+        Clock fixedClock = Clock.fixed(fixedInstant, zoneId);
 
-        Mockito.when(time.getSecondsOfDay(schedule.get(0))).thenReturn(8 * 60 * 60);          //8:00
-        Mockito.when(time.getSecondsOfDay(schedule.get(2))).thenReturn(10 * 60 * 60);         //10:00
-        Mockito.when(time.getLocalDate(date)).thenReturn(LocalDate.of(2023, 12, 1));    //1.12 (год не важен)
-        Mockito.when(time.getShift(Mockito.any(LocalDate.class))).thenReturn(1);                //Понедельник
+        clockMock = Mockito.mockStatic(Clock.class);
+        clockMock.when(Clock::systemDefaultZone).thenReturn(fixedClock);
+        Assertions.assertEquals(localTime, LocalTime.now());
 
         Mockito.when(database.getUsersGroup(id)).thenReturn(group);
         Mockito.when(database.getNotificationShift(id)).thenReturn(10);                      //10 минут
-        Mockito.when(database.getSchedule(id, shiftDay)).thenReturn(schedule);
+        Mockito.when(database.getSchedule(id, time.getShift())).thenReturn(schedule);
         Mockito.when(database.tableIsExist(group)).thenReturn(true);
-        Mockito.when(database.getUserIdNotification()).thenReturn(Arrays.asList(id));
+        Mockito.when(database.getUserIdNotification()).thenReturn(List.of(id));
 
-        Mockito.when(parser.parse(time, group)).thenReturn(weekSchedule);
+        Mockito.when(parser.parse(time, group)).thenReturn(List.of(schedule));
+    }
+
+    /**
+     * Удаление mock объектов перед стартов нового теста
+     */
+    @AfterEach
+    public void MockitoAfter(){
+        clockMock.close();
     }
 
     /**
@@ -88,11 +102,11 @@ public class CommandTest {
      */
     @Test
     public void getScheduleVerifyTest(){
-        user.processMessage("/schedule");
-        String answer = user.processMessage("1.12");
-        Assertions.assertEquals("8:00 Матан\n" +
-                                         "-\n" +
-                                         "10:00 Алгем\n", answer);
+            user.processMessage("/schedule");
+            String answer = user.processMessage(dateString);
+
+            String stringSchedule = String.join("\n", schedule) + "\n";
+            Assertions.assertEquals(stringSchedule, answer);
     }
 
     /**
@@ -103,7 +117,7 @@ public class CommandTest {
         Mockito.when(database.getUsersGroup(id)).thenThrow(SQLException.class);
 
         user.processMessage("/schedule");
-        String answer = user.processMessage("1.12");
+        String answer = user.processMessage(dateString);
 
         Assertions.assertEquals("Для начала укажите свою группу", answer);
     }
@@ -141,16 +155,16 @@ public class CommandTest {
      * @throws SQLException не бросается
      */
     @Test
-    public void changeGroupUnreadScheduleTest() throws IOException, SQLException{
+    public void changeGroupUnreadScheduleTest() throws NoSuchElementException, IOException, SQLException{
+        Mockito.when(database.getSchedule(id, 0)).thenThrow(SQLException.class);
         Mockito.when(parser.parse(time, group)).thenThrow(IOException.class);
-        Mockito.when(database.tableIsExist(group)).thenReturn(false);
 
         user.processMessage("/change_group");
         String answer = user.processMessage(group);
 
         Mockito.verify(parser).parse(time, group);
         Mockito.verify(database, Mockito.never()).setSchedule(Mockito.anyString(), Mockito.any());
-        Assertions.assertEquals("Ошибка считывания расписания.", answer);
+        Assertions.assertEquals("Не удалось прочесть расписание", answer);
     }
 
     /**
@@ -159,15 +173,16 @@ public class CommandTest {
      * @throws SQLException не бросается
      */
     @Test
-    public void changeGroupNoSuchGroupTest() throws IOException, SQLException{
-        Mockito.when(parser.parse(Mockito.any(), Mockito.anyString())).thenThrow(NoSuchElementException.class);
+    public void changeGroupNoSuchGroupTest() throws NoSuchElementException, IOException, SQLException{
+        Mockito.when(database.getSchedule(id, 0)).thenThrow(SQLException.class);
+        Mockito.when(parser.parse(time, group)).thenThrow(NoSuchElementException.class);
 
         user.processMessage("/change_group");
         String answer = user.processMessage(group);
 
+        Assertions.assertEquals("Не удалось найти группу с таким номером", answer);
         Mockito.verify(parser).parse(time, group);
         Mockito.verify(database, Mockito.never()).setSchedule(Mockito.anyString(), Mockito.any());
-        Assertions.assertEquals("Не удалось найти группу с таким номером", answer);
     }
 
     /**
@@ -176,13 +191,17 @@ public class CommandTest {
      */
     @Test
     public void changeScheduleVerifyTest() throws SQLException{
-        user.processMessage("/change_schedule");
-        user.processMessage("1.12");
-        String answer = user.processMessage("8:00 Матан\n" +
-                                            "10:00 Алгем");
+        List<String> customSchedule = List.of("8:00 Матан", "10:00 Алгем");
+        String customScheduelString = String.join("\n", customSchedule);
+
+        String answer;
+
+        answer = user.processMessage("/change_schedule");
+        answer = user.processMessage(dateString);
+        answer = user.processMessage(customScheduelString);
 
         Assertions.assertEquals("Расписание обновлено", answer);
-        Mockito.verify(database).setCastomSchedule(id, List.of("8:00 Матан", "10:00 Алгем"), shiftDay);
+        Mockito.verify(database).setCastomSchedule(id, customSchedule, time.getShift());
     }
 
     /**
@@ -191,42 +210,31 @@ public class CommandTest {
      */
     @Test
     public void nextLessonVerify() throws SQLException{
-        user.processMessage("/next_lesson");
-        Mockito.verify(database).getNextLesson(id, time.getShift(LocalDate.now()), time.getSecondsOfDay() / 60);
-    }
+        String answer = user.processMessage("/next_lesson");
 
-    /**
-     * Проверка корректной работы установщика уведомлений
-     */
-    @Test
-    public void notificationUpdateDefaultTest(){
-        logic.updateNotification(bot);
-        Mockito.verify(scheduler, Mockito.times(1)).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(18 * 60 * 60)), Mockito.eq(TimeUnit.SECONDS));
+        Assertions.assertEquals(schedule.get(0), answer);
+        Mockito.verify(database).getSchedule(id, time.getShift());
     }
 
     /**
      * Проверка корректности включения уведомлений
      */
     @Test
-    public void setNotificationVerifyTest(){
+    public void setNotificationVerifyTest() throws SQLException{
+        Mockito.when(database.getStatusNotifications(id)).thenReturn(1);
         String answer = user.processMessage("/notification_on");
 
         Assertions.assertEquals("Уведомления включены", answer);
-        Mockito.verify(scheduler).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(2 * 60 - 10) *  60), Mockito.eq(TimeUnit.SECONDS));
-        Mockito.verify(scheduler).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(4 * 60 - 10) *  60), Mockito.eq(TimeUnit.SECONDS));
-        Mockito.verify(scheduler, Mockito.times(2)).schedule(Mockito.any(Runnable.class), Mockito.anyLong(), Mockito.eq(TimeUnit.SECONDS));
-    }
+        Mockito.verify(scheduler, Mockito.times(schedule.size())).schedule(Mockito.any(Runnable.class), Mockito.anyLong(), Mockito.eq(TimeUnit.SECONDS));
+        long currentTime = time.getSecondsOfDay();
+        long shiftTime = database.getNotificationShift(id) * 60;
 
-    /**
-     * Проверка корректности невключения при отсутствии группы
-     * @throws SQLException обрабатывается
-     */
-    @Test
-    public void setNotificationWithNoGroupTest() throws SQLException{
-        Mockito.when(database.getUsersGroup(id)).thenThrow(SQLException.class);
-
-        String answer = user.processMessage("/notification_on");
-        Assertions.assertEquals("Для начала укажите группу", answer);
+        for(String lesson : schedule) {
+            long lessonTime = time.getSecondsOfDay(lesson);
+            Mockito.verify(scheduler).schedule(runnableCaptor.capture(), Mockito.eq(lessonTime - currentTime - shiftTime), Mockito.eq(TimeUnit.SECONDS));
+            runnableCaptor.getValue().run();
+            Mockito.verify(bot).sendMessage(Long.parseLong(id.substring(1)), lesson);
+        }
     }
 
     /**
@@ -238,7 +246,7 @@ public class CommandTest {
         int timeShift = 50;
 
         user.processMessage("/notification_set");
-        String answer = user.processMessage("50");
+        String answer = user.processMessage(Integer.toString(timeShift));
 
         Assertions.assertEquals("Время установлено", answer);
         Mockito.verify(database).setNotificationShift(id, timeShift);
@@ -253,7 +261,7 @@ public class CommandTest {
         user.processMessage("/notification_set");
         String answer = user.processMessage("dkfjo");
 
-        Assertions.assertEquals("Введено не время", answer);
+        Assertions.assertEquals("Введено не число", answer);
         Mockito.verify(database, Mockito.never()).setNotificationShift(Mockito.eq(id), Mockito.anyInt());
     }
 
@@ -268,5 +276,158 @@ public class CommandTest {
 
         Assertions.assertEquals("Ожидается число от 0 до 90", answer);
         Mockito.verify(database, Mockito.never()).setNotificationShift(Mockito.eq(id), Mockito.anyInt());
+    }
+
+    /**
+     * Проверка установки дедлайнов
+     */
+    @Test
+    public void setDeadlinesTest() throws SQLException{
+        List<String>deadlines = List.of("12:00 Записаться на курсы по английскому", "18:00 Сдать задачу по дискретной математике");
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+
+        String answer;
+
+        user.processMessage("/add_deadlines");
+        user.processMessage(dateString);
+        answer = user.processMessage(stringDeadlines);
+
+        Assertions.assertEquals("Дедлайны успешно установлены", answer);
+        Mockito.verify(database).addDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка не установки дедлайнов при неправильных параметрах
+     */
+    @Test
+    public void setDeadlinesIncorrectInputTest() throws SQLException{
+        List<String>deadlines = List.of("10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому");
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+
+        String answer;
+
+        user.processMessage("/add_deadlines");
+        user.processMessage(dateString);
+        answer = user.processMessage(stringDeadlines);
+
+        Assertions.assertEquals("для строки '%s' не указано время".formatted(deadlines.get(0)), answer);
+        Mockito.verify(database, Mockito.never()).addDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка складывания дедлайнов командой add_deadline
+     */
+    @Test
+    public void addDeadlineTest() throws SQLException{
+        List<String>deadlines = new ArrayList<>(List.of("19:10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому"));
+        List<String>addedDeadlines = List.of("20:00 Сделать тест по истории");
+        String stringAddedDeadlines = String.join("\n", addedDeadlines) + "\n";
+
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(deadlines);
+
+        String answer;
+
+        user.processMessage("/add_deadlines");
+        user.processMessage(dateString);
+        answer = user.processMessage(stringAddedDeadlines);
+
+        Assertions.assertEquals("Дедлайны успешно установлены", answer);
+
+        deadlines.addAll(addedDeadlines);
+        Mockito.verify(database).addDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка редактирования дедлайнов
+     */
+    @Test
+    public void editDeadlineTest() throws SQLException{
+        List<String>deadlines = new ArrayList<>(List.of("19:10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому"));
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(new ArrayList<>());
+
+        user.processMessage("/edit_deadlines");
+        user.processMessage(dateString);
+        String answer = user.processMessage(stringDeadlines);
+
+        Assertions.assertEquals("Дедлайны успешно обновлены", answer);
+        Mockito.verify(database).editDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка редактирования дедлайнов с неправильными данными
+     */
+    @Test
+    public void editDeadlinesIncorrectInputTest() throws SQLException{
+        List<String>deadlines = List.of("10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому");
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+
+        String answer;
+
+        user.processMessage("/edit_deadlines");
+        user.processMessage(dateString);
+        answer = user.processMessage(stringDeadlines);
+
+        Assertions.assertEquals("для строки '%s' не указано время".formatted(deadlines.get(0)), answer);
+        Mockito.verify(database, Mockito.never()).addDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка редактирования дедлайнов в первый раз
+     */
+    @Test
+    public void editDeadlineFirstTimeTest() throws SQLException{
+        List<String>deadlines = new ArrayList<>(List.of("19:10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому"));
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenThrow(SQLException.class);
+
+        user.processMessage("/edit_deadlines");
+        user.processMessage(dateString);
+        String answer = user.processMessage(stringDeadlines);
+
+        Assertions.assertEquals("На этот день нет дедлайнов", answer);
+        Mockito.verify(database, Mockito.never()).editDeadlines(id, deadlines, absoluteDateString);
+    }
+
+    /**
+     * Проверка команды /next_deadline
+     */
+    @Test
+    public void getNextDeadlineTest() throws SQLException{
+        List<String>deadlines;
+        String answer;
+
+        deadlines = List.of("19:10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому");
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(deadlines);
+        answer = user.processMessage("/next_deadlines");
+        Assertions.assertEquals(deadlines.get(0), answer);
+
+        deadlines = List.of("1:10 Записаться на курсы по английскому", "8:20 Записаться на курсы по английскому");
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(deadlines);
+        answer = user.processMessage("/next_deadlines");
+        Assertions.assertEquals(deadlines.get(1), answer);
+
+        deadlines = List.of("1:10 Записаться на курсы по английскому", "4:20 Записаться на курсы по английскому");
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(deadlines);
+        answer = user.processMessage("/next_deadlines");
+        Assertions.assertEquals("Дедлайнов на сегодня нет", answer);
+    }
+
+    /**
+     * Проверка показа дедлайнов на определённую дату
+     */
+    @Test
+    public void getDeadlinesTest() throws SQLException{
+        List<String>deadlines = List.of("19:10 Записаться на курсы по английскому", "19:20 Записаться на курсы по английскому");
+        String stringDeadlines = String.join("\n", deadlines) + "\n";
+        Mockito.when(database.getDeadlines(id, absoluteDateString)).thenReturn(deadlines);
+
+        user.processMessage("/deadlines");
+        String answer = user.processMessage(dateString);
+
+        Assertions.assertEquals(stringDeadlines, answer);
+        Mockito.verify(database).getDeadlines(id, absoluteDateString);
     }
 }
